# estudos-python-de-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_engineering/alura/Python/: sabor_express.py
data_engineering/alura/Python/segunda/: Hora+da+pratica.ipynb
data_engineering/alura/SQL/revisao/: revisoes.md
data_engineering/alura/SQL/sql/: 01_schema.sql  02_queries.sql  03_desafios.sql
data_engineering/alura/machine_learning/: anotacoes.md  arvore_decisao.ipynb
data_engineering/alura/machine_learning/notebooks/: arvore_decisao.ipynb  ml_anotacoes.md  ml_aula2.py
data_engineering/pandas/: hello_pandas.py
data_engineering/python_fundamentos/: desafio_comprehensions.py  fase2_funcoes.py  teste.py  try1.py
data_engineering/python_fundamentos/alura/: Hora+da+pratica.ipynb  Projeto_Python_Data_Science.ipynb  func_prints.py  modulos_funcoes.py  pratica_dict.py  pratica_list_for_try_except.py  sabor_express.py
data_engineering/python_fundamentos/alura/Python/: Projeto_Python_Data_Science.ipynb
data_engineering/python_fundamentos/desafios/: challenge_try.py  desafio_comprehensions.py  fase2_funcoes.py  funcoes.py  hello.py  main.py  stats_utils.py  utils.py
data_engineering/python_fundamentos/ex_001_cav_basico/: main.py
data_engineering/python_fundamentos/ex_001_csv_basico/: main.py  processor.py
data_engineering/revisao_semanal/: avaliacao.py  revisao_semanal.docx
projects/mini_lake/: README.md
tracks/01_foundations/python_fundamentos/: challenge_try.py  desafio_lambdas_2.py  main.py
(+24 files in other folders)
