[project]
name = "mini-lake-first"
version = "0.1.0"
description = "Estudos - trilha Mini Lake First (Data Engineering + AI Engineering)."
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["projects/mini_lake/tests"]
